# Marble_Balancing_Robotic_Arm

./: .gitignore  MarbelSysModel.mlx  README.md  progress_report.txt
20_Controler/: IKin_UR7.m  MarbelSysModel.mlx  (+1 more)
40_Simulation/ros2_ws/src/marble_balancer/: package.xml  setup.cfg  setup.py
40_Simulation/ros2_ws/src/marble_balancer/config/: lqr_params.yaml  servo_params.yaml  ur_controllers.yaml
40_Simulation/ros2_ws/src/marble_balancer/launch/: marble_balancer.launch.py  servo_balancer.launch.py
40_Simulation/ros2_ws/src/marble_balancer/marble_balancer/: go_to_pose.py  lqr_controller_node.py  lqr_math.py  marble_lissajous_node.py  marble_plotter.py  marble_servo_controller.py  marble_spawner.py  marble_visualizer.py  mux_controller.py  rl_residual_node.py  tcp_executor_node.py  tcp_lissajous_node.py  velocity_bridge.py
40_Simulation/ros2_ws/src/marble_balancer/rl_training/: ball_plate_env.py  eval.py  train.py
40_Simulation/ros2_ws/src/marble_balancer/rl_training/models/eval_logs/: evaluations.npz
40_Simulation/ros2_ws/src/marble_balancer/rl_training/models/run1_600k/: vec_normalize.pkl
40_Simulation/ros2_ws/src/marble_balancer/rl_training/models/run2_2M/: vec_normalize.pkl
40_Simulation/ros2_ws/src/marble_balancer/rl_training/models/run3_stage2/: vec_normalize.pkl
40_Simulation/ros2_ws/src/marble_balancer/rl_training/tensorboard/SAC_1/: events.out.tfevents.1773988232.lincoln-Legion7i.114237.0
40_Simulation/ros2_ws/src/marble_balancer/urdf/: marble.sdf  ur5e_marble_balancer.urdf.xacro
40_Simulation/ros2_ws/src/ur_moveit_config/: CMakeLists.txt  package.xml
40_Simulation/ros2_ws/src/ur_moveit_config/config/: joint_limits.yaml  ur.srdf
(+467 files in other folders)
