<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>marble_balancer</name>
  <version>0.1.0</version>
  <description>LQR marble balancing controller for UR robot arm via MoveIt2</description>
  <maintainer email="pgery@purdue.edu">Gery</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- Classic Gazebo ground truth (P3D plugin publishes directly, no bridge needed) -->
  <depend>nav_msgs</depend>

  <!-- MoveIt2 messages -->
  <depend>moveit_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
