<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur_moveit_config</name>
  <version>0.0.1</version>
  <description>Manual MoveIt Config for UR5e</description>
  <maintainer email="gery@estate.com">Gery</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
